--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SolanaHub Gateway</title>
+    <meta name="description" content="Best tools in solana">
+    <meta name="og:title" property="og:title" content="Solana tools">
+    <meta name="robots" content="index, follow">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
